# DATSimulatorC

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
DATSimulatorC/: CMakeLists.txt  DATSimulatorC.cpp  DATSimulatorC.h  JsonConfig.cpp  JsonConfig.h
DATSimulatorC/Tests/: CMakeLists.txt  test.json  tests.cpp
